<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.nitt.spider.accelerometer.Home">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/xaxis"
            android:id="@+id/textViewXHeading"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="30dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yaxis"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/textViewYHeading"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaxis"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="40dp"
            android:id="@+id/textViewZHeading" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:layout_marginTop="20dp"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ax"
            android:id="@+id/textViewX"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ay"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/textViewY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/az"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/textViewZ" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="40dp"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e"
            android:id="@+id/textViewError"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ax"
            android:id="@+id/textViewgX"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ay"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/textViewgY"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/az"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:id="@+id/textViewgZ" />
    </LinearLayout>

    <Button
        android:text="@string/stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:id="@+id/buttonStop"
        android:layout_below="@+id/buttonStart"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/buttonStart"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/buttonStop" />

</RelativeLayout>
